# Vocal_Analysis

./: CMakeLists.txt  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/VocalAnalysis/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
